--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,21 @@
     box-sizing: border-box;
 }
 
+.fundo-apresentacao{
+    width: 80%;
+    margin: 10px auto;
+    background: #808080a6;
+    border-radius: 30px;
+}
+
+.corpo-apresentacao{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 80px;
+}
+
 .corpo-fundo{
     background-attachment: fixed;
     font-family: Arial, sans-serif;
@@ -41,20 +56,25 @@
             align-items: flex-end;
             justify-content: center;
             flex-wrap: nowrap;
-
-
+            gap: calc(10% - 40px);
         }
 }
 .content-images .ia {
     height: auto;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
 }
 
 .content-images .desenv {
     height: auto;
     display: flex;
-    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    justify-content: center;
 }
 
 .ia img {
@@ -65,6 +85,17 @@
 .desenv img {
     width: calc(120% + 20px); 
     height: auto;
+}
+
+.ia p, .desenv p{
+        font-size: 2vw;
+        text-decoration: none;
+        color: white;
+        border-color: red;
+        background: red;
+        border-radius: 30px;
+        padding: 5px 30px;
+        position: absolute;
 }
 
 #myVideo {
